@@ -30,6 +30,9 @@ Bugfixes:
 
  * Issue #167: fix some typos returned on HELP.
 
+ * Issue #177: (FTPS) an exception when shutting down the SSL layer can cause
+   server to crash (DoS).
+
 Major API changes since 0.6.0:
 
  * AbstractedFS root and cwd properties can now be set via setattr().
